force-app/main/default/objects/Marca__c/Marca__c.object-meta.xml
<CustomObject>
    <label>Marca</label>
    <nameField>
        <label>Nombre de Marca</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marcas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>