force-app/main/default/objects/Marca__c/fields/N_o_I__c.field-meta.xml
<CustomField>
    <fullName>N_o_I__c</fullName>
    <label>N o I</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nacional</fullName>
            </value>
            <value>
                <fullName>Importado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>