force-app/main/default/objects/Marca__c/fields/Tipo_de_marca__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_marca__c</fullName>
    <label>Tipo de marca</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medicamento</fullName>
            </value>
            <value>
                <fullName>Protesis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>