force-app/main/default/objects/Marca__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Tipo_de_marca__c</columns>
    <columns>N_o_I__c</columns>
    <columns>Descripcion__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>